[package]
name = "httpencode"
version = "0.1.0"
authors = ["Sean Lynch <slynch@twitter.com>"]
edition = "2018"
license = "Apache-2.0 OR MIT"

[features]
std = [ "bytes/std" ]
default = [ "std" ]

[dependencies]
bytes = { version="0.5.1", default-features = false }
memchr = "2.2.1"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.3.0"

[[bench]]
name = "compose"
harness = false
